testsuite/gnat2goto/tests/op_concat/test.opt
ALL XFAIL gnat2goto reports Concat unsupported
